chore: 更新项目配置和文档

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -49,4 +49,13 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-
+      - '^chore:'
+  groups:
+    - title: Features
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 0
+    - title: Bug Fixes
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 1
+    - title: Others
+      order: 999
